--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,41 +1,29 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Panel de Administrador</title>
-</head>
-<body>
-  <h1>Panel de Administrador</h1>
-  <button id="create-user-btn">Crear Nuevo Usuario</button>
-  <button id="delete-user-btn">Eliminar Usuario</button>
-  <button id="view-users-btn">Ver Usuarios Registrados</button>
-  <button type="button" id="logout-btn">Cerrar Sesion</button>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Panel de Administrador</title>
+    <link rel="stylesheet" href="../styles/admin.css">
+  </head>
+  <body>
+    <h1>Panel de Administrador</h1>
 
-  
-  <ul id="users-list"></ul>
+    <div class="container">
+      <div class="button-container">
+        <button id="create-user-btn">Crear Nuevo Usuario</button>
+      </div>
+      <div class="button-container">
+        <button id="view-users-btn">Ver Usuarios Registrados</button>
+      </div>
+      <div class="button-container">
+        <button type="button" id="logout-btn">Cerrar Sesion</button>
+      </div>
 
-  <script type="module" src="../controllers/admin.js"></script>
-</body>
-</html>
- -->
- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Panel de Administrador</title>
-</head>
-<body>
-  <h1>Panel de Administrador</h1>
-  <button id="create-user-btn">Crear Nuevo Usuario</button>
-  <!-- <button id="delete-user-btn">Eliminar Usuario</button> -->
-  <button id="view-users-btn">Ver Usuarios Registrados</button>
-  <button type="button" id="logout-btn">Cerrar Sesion</button>
+      <!-- Agrega una lista para mostrar los usuarios -->
+      <ul id="users-list"></ul>
+    </div>
 
-  <!-- Agrega una lista para mostrar los usuarios -->
-  <ul id="users-list"></ul>
-
-  <script type="module" src="../controllers/admin.js"></script>
-</body>
-</html>
+    <script type="module" src="../controllers/admin.js"></script>
+  </body>
+  </html>
